@@ -1,3 +1,7 @@
+2011-06-20  Tom Tromey  <tromey@redhat.com>
+
+	* symtab.c (lookup_language_this): End loop if block is NULL.
+
 2011-06-17  Tom Tromey  <tromey@redhat.com>
 
 	* valops.c (value_of_this): Use lookup_language_this.
